[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautobot-app-routing-tables"
version = "1.1.1"
description = "Nautobot App to model routing tables per device/VRF with optional auto-managed connected routes."
readme = "README.md"
requires-python = "<3.14,>=3.10"
license = {text = "Apache-2.0"}
authors = [{name="Never77"}]
dependencies = ["nautobot>=2.4.0"]

[project.optional-dependencies]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]
dev = ["ruff>=0.6", "pytest>=8"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nautobot_routing_tables*"]

[tool.ruff]
line-length = 110
target-version = "py310"
